2005-05-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  back to TRUNK

=== release 0.1.8 ===

2005-05-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  releasing 0.1.8, "Baja Beach"

2005-05-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion.spec.in:
	* flumotion/extern/Makefile.am:
	* flumotion/ui/trayicon.py:
	* flumotion/wizard/Makefile.am:
	  various fixes to make spec file and trayicon work

2005-05-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/Makefile.am:
	* doc/redhat/make-dummy-cert:
	* flumotion.spec.in:
	  use an included make-dummy-cert because it was removed
	  from openssl rpm for FC4

2005-05-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/encoders.xml:
	* flumotion/component/encoders/theora.py:
	  apply patch for theora advanced settings.  Closes #201.

2005-05-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/producers/audiotest/audiotest.py:
	* flumotion/component/producers/audiotest/audiotest.xml:
	  make audiotest component respect sample rate setting
	  fixes #210

2005-05-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/consumers/httpstreamer/http.py:
	  check user_limit since that's what it's called now
	* flumotion/component/consumers/httpstreamer/http.xml:
	  add user_limit and bandwidth_limit
	* flumotion/component/consumers/httpstreamer/resources.py:
	  rename setMaxClients to setUserLimit

2005-05-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/encoders.xml:
	* flumotion/wizard/steps.py:
	  treat vorbis encoding quality as a float (0.0 - 1.0)
	  Fixes #212

2005-05-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	patch by: Zaheer Abbas Merali <zaheermerali at gmail dot com>

	* configure.ac:
	* flumotion/admin/gtk/client.py:
	* flumotion/extern/Makefile.am: